sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:10: error: '=' expected but ';' found.
    var currBase;
                ^